0.6.2.9
Support AccessToken for AAD authentication in Get-TestsFromNavContainer and Run-TestsInNavContainer

0.6.2.8
Get-TestsFromNavContainer and Run-TestsInNavContainer now supports NAV 2016, NAV 2017, NAV 2018 and Business Central.
Issue #528 - add SqlCredential to Generate-SymbolsInNavContainer
Support AccessToken as Office365Password instead of the AAD User Password (to allow MFA accounts)
Invoke-ScriptInNavContainer automatically switches to docker exec if new-pssession fails

0.6.2.7
Add -includeCSIDE parameter to Replace-NavServerContainer

0.6.2.6
Allow -bakFile parameter on New-BcContainer to specify a URL
Allow -dvdpath parameter on New-BcContainer to specify a Dropbox, a SAS URL or other URL's which doesn't end in .zip
Add parameter dns to new-navcontainer to override the default dns settings in the container (8.8.8.8 is the address of Google's public dns server)
BugFix: Copy-AlSourceFiles overwrites dotnet.al with local versions of dotnet.al
RunTests and GetTests should give a better error if WebClient isn't included in the container

0.6.2.5
Breaking change: Do not dump eventlog in container log every 2nd second when using New-NavContainer to minimize CPU usage. Added parameter dumpEventLog to keep default behavior.
Added parameter doNotCheckHealth to disable health check and always report healthy (minimize CPU usage)

0.6.2.4
Fix Layout reference in report .al files when using Copy-alSourceFiles
Added function Clean-BcContainerDatabase to remove the base app from a container (extracted from Publish-NewApplicationToNavContainer)
Added function Add-GitToAlProjectFolder (extracted from Create-AlProjectFolderFromNavContainer)
Added parameter -useCleanDatabase to New-BcContainer to allow you to create a container which is ready for VS Code to publish code customized AL app

0.6.2.3
Added parameter locale to New-NavContainer to override the culture setting of the container